updated post content width on mobile/tablet widths

--- a/sass/_archive_header.scss
+++ b/sass/_archive_header.scss
@@ -1,6 +1,6 @@
 .archive-header {
   background: white;
-  padding: $baseline-height / 2 $column * 1.4545;
+  padding: $baseline-height / 2 $column * 1.4545 0;
   margin-bottom: $baseline-height * 1.5;
   box-shadow: 0 0 4px 0 rgba(0,0,0,0.1);
 
