--- a/sass/_post.scss
+++ b/sass/_post.scss
@@ -26,14 +26,14 @@
     }
   }
   .post-header {
-    padding: $baseline-height $column * 2 * 1.4545 0;
+    padding: $baseline-height $column * 1.4545 0;
     text-align: center;
     position: relative;
     z-index: 9;
     box-shadow: 0 -2px 2px 0 rgba(0,0,0,0.05);
   }
   .post-content {
-    padding: 0 $column * 4 * 1.4545 $baseline-height;
+    padding: 0 $column * 1.4545 $baseline-height;
 
     h1, h2, h3, h4, h5, h6 {
       font-weight: 600;
@@ -175,6 +175,18 @@
   }
 }
 
+@media all and (min-width: 700px) {
+
+
+  .singular-post,
+  .error-404 {
+
+    .post-content {
+      padding: 0 $column * 2 * 1.4545 $baseline-height;
+    }
+  }
+}
+
 @media all and (min-width: 800px) {
 
   // create 2 column layout
@@ -243,12 +255,25 @@
   .error-404 {
 
     .post-header {
+      padding: $baseline-height $column * 2 * 1.4545 0;
 
       h1 {
         font-size: 2.3125em; /* 37px / 16px */
         line-height: 1.378; /* 51px */
       }
     }
+    .post-content {
+      padding: 0 $column * 3 * 1.4545 $baseline-height;
+      margin: 0 auto;
+    }
+  }
+}
+
+@media all and (min-width: 1100px) {
+
+  .singular-post,
+  .error-404 {
+
     .post-content {
       padding: 0 $column * 4 * 1.4545 $baseline-height;
       margin: 0 auto;
